packages/jsts/tests/dbd/benchmark/TypeError/T11 X is not a constructor/T11-01/dep.js
class ChartJSNodeCanvas {

}

module.exports = {
  ChartJSNodeCanvas
};


